[package]
name = "gabriele-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = "0.7.2"
embassy-usb = "0.5.1"
embedded-io-async = "0.6.1"
fixed = "1.29.0"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"

